--- a/style.css
+++ b/style.css
@@ -24,6 +24,22 @@ body {
     /*background: linear-gradient(90deg, #0f0c29, #302b63, #24243e);*/
 }
 
+header {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;  
+    padding: 10px;  
+}
+
+header ul {
+    display: flex;
+    
+}
+
+header ul li {
+    padding: 5px;
+}
+
 
 .container {
     text-align: center;
@@ -35,4 +51,22 @@ body {
 
 .container .name h5 {
     font-size: 40px;
+}
+
+#about p {
+    max-width: 600px;
+    margin: 0 auto;
+}
+
+.form {
+    width: 40%;
+    margin: 0 auto;
+}
+
+.form input {
+    width: 50%;
+}
+
+.form button {
+    width: 15%;
 }
